style.css
html{
    height:100%;
    
}

*{
    box-sizing: border-box;
}
body{

    min-height:100%;
    display: flex;
    flex-direction: column;
    background-color: #d8f3dc;
}

footer{
    margin-top: auto;
}


#slider-box{

    padding:10px;
    overflow-x: scroll;
}

#slider{

    padding: 10px;
    width:2100px;
}

.w-card{
    display: inline;
    width:250px;
    margin:3px;
    background-color: #fff;
}

#w-icon{
    width:100%;
}

